@@ -49,6 +49,9 @@ Avro 1.6.2 (unreleased)
     AVRO-968. C: Fixed avro_value_cmp and avro_value_cmp_fast for string
     values. (Vivek Nadkarni via dcreager)
 
+    AVRO-982. Java: Fix NettyTransceiver to not hang when server stops.
+    (Bruno Dumon via cutting)
+
 Avro 1.6.1 (8 November 2011)
 
   INCOMPATIBLE CHANGES
